[package]
name = "aliyun-sts-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Yuan YuQiang"]
description = "A tiny lib for aliyun sts api"
keywords = ["aliyun", "sts"]
repository = ""

[dependencies]
chrono = "0.4.38"
hmac = "0.12.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
urlencoding = "2.1.3"
hex = "0.4.3"
sha2 = "0.10.8"
log = "0.4.22"
simple_logger = "5.0.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = {version = "1.40.0", features = ["full"]}
